methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:12: error: not found: value Yellow
  setCouleurBrosse(Yellow);faireV();setCouleurBrosse(Color.RED);faireV();SetCXouleurBrosse(Color.BLUE);faireV();setCouleurBrosse(Color.GREEN)
                   ^MethodsPicture:12: error: not found: value SetCXouleurBrosse
  setCouleurBrosse(Yellow);faireV();setCouleurBrosse(Color.RED);faireV();SetCXouleurBrosse(Color.BLUE);faireV();setCouleurBrosse(Color.GREEN)
                                                                         ^